--- a/package.json
+++ b/package.json
@@ -8,20 +8,32 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
+  "packageManager": "pnpm@10.4.1",
+  "overrides": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "next": "15.3.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
+    "eslint-config-next": "15.3.1"
+  },
+  "dependencies": {
+    "next": "15.3.1",
+    "next-auth": "5.0.0-beta.27",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
