--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,14 +21,19 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.2",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.88.3",
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "next-auth": "5.0.0-beta.27",
+    "next-sanity": "^9.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sanity": "^3.88.3",
+    "styled-components": "^6.1.18",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
