--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.88.3",
+    "sanity-plugin-markdown": "^5.1.0",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
