--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.2",
+    "@sanity/client": "^7.2.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.88.3",
     "@tailwindcss/typography": "^0.5.16",
