--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev ",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predev": "pnpm run typegen",
+    "prebuild": "pnpm run typegen",
+    "typegen": "pnpm exec sanity schema extract --path=./sanity/extract.json && pnpm exec sanity typegen generate"
   },
   "packageManager": "pnpm@10.10.0",
   "overrides": {
