--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.2",
     "@sanity/client": "^7.2.1",
+    "@sanity/code-input": "^5.1.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.88.3",
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.509.0",
+    "markdown-it": "^14.1.0",
     "next": "15.3.1",
     "next-auth": "5.0.0-beta.27",
     "next-sanity": "^9.11.1",
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
