--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "sanity": "^3.88.3",
     "sanity-plugin-markdown": "^5.1.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
