--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sanity": "^3.88.3",
     "sanity-plugin-markdown": "^5.1.0",
     "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.3",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.2.0",
