--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sanity/code-input": "^5.1.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.88.3",
+    "@sentry/nextjs": "^9.23.0",
     "@tailwindcss/typography": "^0.5.16",
     "@uiw/react-md-editor": "^4.0.7",
     "class-variance-authority": "^0.7.1",
