--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "15.3.1"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.2",
     "@sanity/client": "^7.2.1",
     "@sanity/code-input": "^5.1.2",
